# walkthrough

./: .gitignore  DESIGN.md  PLAN.md  PRODUCT.md  README.md  RESTRUCTURE-PLAN.md  SKILL.md  TIME-TO-GROK-WORKFLOW.md  pyproject.toml
agents/: openai.yaml
assets/: walkthrough-template.html
references/: claude-session-format.md  codex-session-format.md  normalized-event-model.md  remediation-baseline.md  skill-eval-benchmark-template.md  ttg-judging-rubric.md  walkthrough-architectures.md  walkthrough-schema.md  walkthrough-template-reference.md
scripts/: batch_pipeline.py  capture_screenshots.py  check_setup.py  chunk_events.py  discover_sessions.py  export_opencode.py  extract_altitude_slices.py  extract_session_cards.py  inject_capture_media.py  merge_summaries.py  normalize_claude.py  normalize_codex.py  normalize_opencode.py  project_events.py  render_html.py  strip_binary.py  validate_pipeline.py  validate_walkthrough_quality.py
tests/: test_batch_pipeline.py  test_capture_screenshots.py  test_chunk_events.py  test_extract_altitude_slices.py  test_first_run.py  test_inject_capture_media.py  test_merge_summaries.py  test_normalize_claude.py  test_normalize_codex.py  test_normalize_opencode.py  test_project_events.py  test_render_html.py  test_validate_pipeline.py  test_validate_walkthrough_quality.py
